# aoc2024

./: .gitignore  LICENSE  README.md  cspell.json  manage.py  pyproject.toml
aoc2024/: __init__.py  __main__.py  cli.py  data.py  utils.py
aoc2024/day01/: __init__.py  data.py  solution.py  tests.py
aoc2024/day02/: __init__.py  data.py  solution.py  tests.py
aoc2024/day03/: __init__.py  data.py  solution.py  tests.py
aoc2024/day04/: __init__.py  data.py  solution.py  tests.py
aoc2024/day05/: __init__.py  data.py  solution.py  tests.py
templates/day/: __init__.py.j2  data.py.j2  solution.py.j2  tests.py.j2
