[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "asdf"
authors = ["Matthew Wyant <me@matthewwyant.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
# homepage = ""
repository = "https://github.com/therealzanfar/aoc_template"
# documentation = ""
# keywords = [""]
include = ["LICENSE"]


classifiers = [
    # https://pypi.org/classifiers/
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # "Operating System :: Unix",
    # "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    # "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]


# https://pypi.org/classifiers/
[tool.poetry.scripts]
aoc_template = 'aoc_template.__main__:cli_main'

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^13.9.2"
advent-of-code-data = "^2.0.1"
aocd-example-parser = "^2023.12.17"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.1"
pytest = "^8.3.3"
ruff = "^0.7.0"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "ANN101",
    "ANN102",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["ANN001", "ANN002", "ANN003", "D101", "D103"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
